--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>GitAction</artifactId>
     <version>1.0</version>
 
-    <packaging>war</packaging>
+    <packaging>**war**</packaging>
     <name>${project.artifactId}</name>
     <url>http://maven.apache.org</url>
 
@@ -66,6 +66,8 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+ <mainClass>**com.edu.Application**</mainClass>
+                      </configuration>
             </plugin>
 
             <plugin>
