--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,8 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
- <mainClass>**com.edu.Application**</mainClass>
+                      <configuration>
+ <mainClass>com.edu.Application</mainClass>
                       </configuration>
             </plugin>
 
