--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>GitAction</artifactId>
     <version>1.0</version>
 
-    <packaging>**war**</packaging>
+    <packaging>war</packaging>
     <name>${project.artifactId}</name>
     <url>http://maven.apache.org</url>
 
